tdf#159790 eliminate deadlock on main thread

A separate thread may have already acquired m_aMutex and that
thread will then try to acquire the solar mutex. However, when
the main thread calls this method, the main thread has already
acquired the solar mutex.

So, drop the desktop mutex before calling out.

Change-Id: Ic87063266ac5101b866df9f24067a403e1417745
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165682
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 89e23bb599104d3bde30878148e15cf4deb1593f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165710
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>